Revision history for Capture-Tiny

{{$NEXT}}

0.16      2012-02-12 21:04:24 EST5EDT

  Documented:

  - Noted problems and workaround for FCGI's pathological tied STDIN
    [rt.cpan.org #74681; thank you Karl Gaissmaier for testing the
    workaround]

0.15      2011-12-23 11:10:47 EST5EDT

  Fixed:

  - Repeated captures from a custom filehandle would return undef instead
    of the empty string (and would warn). This has been fixed.
    [rt.cpan.org #73374 part two. Thank you to Philipp Herz for help
    in reproducing this bug.]

  Other:

  - Commented out debugging code for slightly less runtime overhead

0.14      2011-12-22 10:14:09 EST5EDT

  Added:

  - Capturing with custom filehandles will return only newly appended
    output instead of everything already in the file.
    [rt.cpan.org #73374]

0.13      2011-12-02 13:39:00 EST5EDT

  Fixed:

  - Fixed t/18-custom-capture.t failures on Windows due to tempfile
    removal problems in the testfile

0.12      2011-12-01 16:58:05 EST5EDT

  Added:

  - New functions capture_stdout, capture_stderr, tee_stdout, tee_stderr
    [rt.cpan.org #60515]

  - Capture functions also returns the return values from the executed
    coderef [rt.cpan.org #61794, adapted from patch by Christian Walde]

  - Capture functions take optional custom filehandles for capturing
    via named files instead of anonymous ones [inspired by Christian Walde]

  Fixed:

  - Tied filehandles based on Tie::StdHandle can now use the ":utf8"
    layer; removed remaining TODO tests; adds Scalar::Util as a dependency

  Changed:

  - When Time::HiRes::usleep is available, tee operations will
    sleep during the busy-loop waiting for tee processes to be ready
    [rt.cpan.org #67858]

0.11      2011-05-19 23:34:23 America/New_York

  Fixed:

  - Tests will not use Test::Differences version 0.60 or greater

0.10      2011-02-07 07:01:44 EST5EDT

  Fixed:

  - Setting PERL_CAPTURE_TINY_TIMEOUT to 0 will disable timeouts
