@@ -9,3 +9,4 @@ MYMETA.yml
 .build
 /Capture-Tiny-*
 /DEBUG
+/_Inline
